style/modules/content/_sitetable.scss
// post rank
.rank {
	display: none;
}

// vote arrow/score column & thumbnail margin
.midcol {
	@include margin(null em(15, 13) null 0);
	width: em(24, 13) !important; // ;_; gotta override inline styling
}

// also affects sidebar vote arrows
.arrow {
	height: em(18, 13);
	width: em(24, 13);

	&.upmod {
		background: url(%%light-upvote-pressed%%) 0 no-repeat;
	}

	&.downmod {
		background: url(%%light-downvote-pressed%%) 0 no-repeat;
	}

	&.up {
		background: url(%%light-upvote%%) 0 no-repeat;
		opacity: 0.26;
	}

	&.down {
		background: url(%%light-downvote%%) 0 no-repeat;
		opacity: 0.26;
	}
}

// aligns score between new arrows
#siteTable {
	&>.likes .score,
	&>.dislikes .score,
	&>.thing .score {
		font-size: em(14, 13);
		position: relative;
	}
}

#siteTable {
	// individual post listings
	&>.thing {
		@include padding(em(15, 10) 0 em(15, 10) 0);

		// @include border-width(em(1, 10) null);
		// @include border-style(solid null);
		// @include border-color($light-app-bar);

		margin: 0;

		// remove padding from topmost post
		&:first-of-type {
			padding-top: 0;

			// border-top: 0;
		}

		.title {
			color: $link-color;
			line-height: 1.35;
			margin: 0 0 em(5, 16) 0;

			&:visited {
				color: $link-color-visited;
			}
		}

		.domain,
		.domain a,
		.tagline,
		.entry .buttons li a {
			color: $light-secondary-text;
		}
	}
}

// color of post score
.thing .score {

	&.likes {
		color: $upvote;
	}

	&.dislikes {
		color: $downvote;
	}
}

// thumbnail
.thumbnail {
	border: em(1, 10) solid $light-hint-text;
	border-radius: 50%;
	font-size: inherit;
	margin: 0 em(15, 10) 0 0;
	max-height: em(70, 10);
	@include transition-default;

	&:hover {
		border-color: $light-secondary-text;
	}

	img {
		height: auto;
		width: auto;
		max-height: em(70, 10);
	}

	&.self,
	&.default {
		@extend .thumbnail;
		border-color: $black;
		height: em(70, 10);
		width: em(70, 10);
		opacity: 0.26;

		&:hover {
			opacity: 0.54;
		}
	}

	&.self {
		background: url(%%light-thumbnail-self%%) 0 no-repeat;
	}

	&.default {
		background: url(%%light-thumbnail-default%%) 0 no-repeat;
	}
}

// nsfw thumbnail styling
.thing.over18 > .thumbnail.self {
	background: url(%%nsfw%%) 0 no-repeat;
	border-color: $nsfw;
	opacity: 0.54;

	&:hover {
		border-color: rgba($nsfw, 0.54);
		opacity: 1;
	}
}

.domain,
.approval-checkmark {
	float: right;
}

@include keyframes(minustoplus) {
	0% {
		@include transform(rotate(90deg));
	}
	100% {
		@include transform(rotate(0));
	}
}

// media and self post expansion buttons
.expando-button {
	border: em(1, 10) solid $light-hint-text;
	border-radius: em(2, 10);
	cursor: pointer;
	margin-right: em(6, 10);
	opacity: 0.54;
	position: relative;
	top: em(2, 10);
	@include transition-default;

	&:hover {
		border-color: $light-secondary-text;
	}

	&.collapsed,
	&.collapsed:hover,
	&.expanded,
	&.expanded:hover {

		&:before,
		&:after {
			background-color: $black;
			content: "";
			position: relative;
			display: block;
		}

		&:before {
			width: em(7, 10);
			height: em(1, 10);
			top: em(17, 10);
			left: em(14, 10);
		}
		
		&:after {
			width: em(1, 10);
			height: em(7, 10);
			top: em(13, 10);
			left: em(17, 10);
		}
	}

	// animate expand/collapse
	&.collapsed:after,
	&.expanded:after {
		@include transition-default;
	}

	&.collapsed:after {
		@include animation(minustoplus 0.5s ease 1);
	}

	&.expanded:after {
		@include animation(minustoplus 0.5s ease 1 reverse);
		transform: rotate(90deg);
	}

	// video expandos
	&.video {

		&.collapsed,
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			background: url(%%play%%) 0 no-repeat;
		}
	}

	// image expandos
	&.image {
		width: em(25, 10);
		height: em(25, 10);

		&.collapsed,
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			background: url(%%camera%%) 0 no-repeat !important; // ;_; thx res
			
			// reposition horizontal line in plus/minus
			&:after {
				top: em(-1, 10); // why, sway???
			}
		}
	}

	&.selftext {

		&.collapsed,
		&.collapsed:hover,
		&.expanded,
		&.expanded:hover {
			background: url(%%text%%) 0 no-repeat;
		}
	}
}

.tagline,
.flat-list.buttons {
	font-size: em(12, 10);
}

.expando-button ~ .tagline {
	position: relative;
	left: em(2, 12);
	top: em(9, 12);
}

.flat-list.buttons {
	clear: left;
	left: em(-1, 12);
	position: relative;
}

// nsfw stamp
.entry .buttons li.nsfw-stamp,
.nsfw-stamp acronym {
	border: 0 !important; // ;_; thx reddit css
	border-radius: em(2, 10);
	background-color: $nsfw;
	color: $white;
	font-weight: bold;
	line-height: 0;
	padding: 0 em(2, 10);
	position: relative;
	top: em(-1, 10);
}

